<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grey"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/amount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/amount"
        android:textColor="@color/Black"
        android:textSize="50sp"
        app:fontFamily="@font/source_code_pro"
        app:layout_constraintBottom_toTopOf="@id/fees_tiLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fees_tiLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/White"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0.5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fees_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:layout_marginHorizontal="10dp"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:textAlignment="center"
            android:imeOptions="actionDone"
            android:textColor="@color/Black"
            android:textSize="50sp"
            app:fontFamily="@font/source_code_pro" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/visa_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_visa"
        app:layout_constraintEnd_toStartOf="@+id/mastercard_iv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fees_tiLayout"
        android:contentDescription="@string/visa_icon_contentDescription" />

    <ImageView
        android:id="@+id/mastercard_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_mastercard"
        app:layout_constraintBottom_toBottomOf="@+id/visa_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/visa_iv"
        app:layout_constraintTop_toTopOf="@+id/visa_iv"
        android:contentDescription="@string/mastercard_icon_contentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>